fixed the deadlock problem